<?xml version="1.0"?>
<package format="2">
  <name>fm_rviz_polygon_tool</name>
  <version>0.0.0</version>
  <description>
    RVIZ tool to create polygons.
  </description>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>
  <maintainer email="tmarvel@student.ethz.ch">Timothy Marvel</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>cgal_catkin</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
